--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,3 +16,5 @@ jobs:
       
     - name: Hello World
       run: echo "Hello, World!"
+      run: echo "Hello, World!"
+      run: echo "Hello, World!"
