--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,4 @@ jobs:
       uses: actions/checkout@v2
       
     - name: Hello World
-      run: echo "Hello, World!"
-      run: echo "Hello, World!"
+      run: echo "Hello, World! Hello, World!"
